Updating to v1.6.0
