# src/core/integrations/express/handlers/index.ts
@@ -3,4 +3,5 @@ export { fetchNavigation, FETCH_NAVIGATION_ROUTE } from './fetchNavigation';
 export { fetchProjectProperties, FETCH_PROJECT_PROPERTIES_ROUTE } from './fetchProjectProperties';
 export { findElement, FIND_ELEMENT_ROUTE } from './findElement';
 export { isPreview, IS_PREVIEW_ROUTE } from './isPreview';
+export { getAvailableLocales, GET_AVAILABLE_LOCALES_ROUTE } from './getAvailableLocales';
 export { fallbackHandler } from './fallbackHandler';
